<resources>

    <!-- This XML file includes a list of single strings that are referenced from the application
         or from other resource files (such as an XML layout, an Activity/Fragment Java class). -->

    <!-- Corresponding toolbar title for each Activity or Fragment -->
    <string name="app_name">Mobile App</string>
    <string name="title_activity_main">User Login</string>
    <string name="title_activity_data_sync">Data Synchronisation</string>
    <string name="title_activity_location">Location Selection</string>
    <string name="title_activity_household_home">Household Home</string>
    <string name="title_create_hh">HOUSEHOLD ROSTER</string>
    <string name="title_create_patient">PATIENT BASIC INFORMATION</string>
    <string name="title_choose_hh">Choose A Household</string>
    <string name="title_choose_patient">Choose A Patient</string>
    <string name="title_qnn_washington">WASHINGTON GROUP</string>
    <string name="title_qnn_mobility">MOBILITY QUESTIONNAIRE</string>
    <string name="title_asmt_hearx">HearX ASSESSMENT</string>
    <string name="title_asmt_peek">PEEK ASSESSMENT</string>
    <string name="title_asmt_default">Assessment/Questionnaire</string>
    <string name="title_activity_about">About</string>


    <!-- activity_main (login page) -->
    <string name="login_instruction">User login</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>

    <!-- activity_location -->
    <string name="selection_location_instruction">Select a Project\'s country, region and cluster</string>
    <string name="project_country">Project Country: </string>
    <string name="project_region">Project Region: </string>
    <string name="project_cluster">Project Cluster: </string>
    <string name="project_country_prompt">Select a country…</string>
    <string name="project_region_prompt">Select a region…</string>
    <string name="project_cluster_prompt">Select a cluster…</string>

    <!-- fragment_questionnaire -->
    <string name="qn_instruction">Question Instruction</string>
    <string name="qn_string">Question String</string>
    <string name="ans_text_entry">Enter your answer here</string>
    <string name="default_qn_instruction_text_entry">This is a text entry question.
            Please enter the response in the text field then click NEXT.</string>
    <string name="default_qn_instruction_scq">This is a single choice question.
            Please select one answer choice from the dropdown list then click NEXT.</string>
    <string name="default_qn_instruction_mcq">This is a multiple choice question.
            Please select appropriate answers by ticking the checkbox then click NEXT.</string>

    <!-- fragment_assessment_placeholder -->
    <string name="asmt_placeholder_peek_prompt">This is a placeholder for PEEK Assessment to be integrated at later stage. \n\n
        After you finish the assessment, click NEXT to proceed. </string>
    <string name="asmt_placeholder_hearx_prompt">This is a placeholder for HearX Assessment to be integrated at later stage. \n\n
        After you finish the assessment, click NEXT to proceed. </string>
    <string name="asmt_placeholder_default_prompt">This is a placeholder for an external Assessment to be integrated at later stage. \n\n
        After you finish the assessment, click NEXT to proceed. </string>

    <!-- fragment_questionnaire_finish -->
    <string name="hh_finish_prompt">You have finished all the questions in Household Roaster Questionnaire. \n\n
            Click FINISH to create this new household and go back to the Household home page.</string>
    <string name="patient_finish_prompt">You have finished all the questions in Patient Basic Information Questionnaire. \n\n
            Click FINISH to update patient assessment status and go back to the Household home page.</string>
    <string name="washington_finish_prompt">You have finished all the questions in General Washington Group Questionnaire. \n\n
            Click FINISH to update patient assessment status and go back to the Patient home page.</string>
    <string name="mobility_finish_prompt">You have finished all the questions in Mobility Questionnaire. \n\n
            Click FINISH to update patient assessment status and go back to the Patient home page.</string>
    <string name="hearx_finish_prompt">You have finished all the measurements taken from the external assessment tool HearX. \n\n
            Click FINISH to update patient assessment status and go back to the Patient home page.</string>
    <string name="peek_finish_prompt">You have finished all the measurements taken from the external assessment tool PEEK. \n\n
            Click FINISH to update patient assessment status and go back to the Patient home page.</string>
    <string name="default_finish_prompt">You have finished all the questions in this Questionnaire/Assessment. \n\n
            Click FINISH to update patient assessment status and go back to the Patient home page.</string>

    <!-- activity_about -->
    <string name="app_version">1.0.0</string>
    <string name="about_organisation">Created by University College London, Dept of Computer Science.
            \n\nCollaborated with London School of Hygiene &amp; Tropical Medicine.</string>
    <string name="about_developer">Jingting Yan, Nadhirah Rafidz</string>
    <string name="contact_info">jingting.yan.17@ucl.ac.uk</string>

</resources>
